Working on running siesta query into a cluster